fix(ui): symbology toggle not aligned with parent

--- a/src/content/styles/modules/_symbology.scss
+++ b/src/content/styles/modules/_symbology.scss
@@ -43,6 +43,10 @@
                 &.show {
                     opacity: 1;
                 }
+
+                &.toggle-button {
+                    margin-right: 6px;
+                }
             }
 
             .rv-symbol-graphic {
